cmake_minimum_required (VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
string(REPLACE " " "_" ProjectId ${ProjectId})
project(${ProjectId} C CXX)
include( ${CMAKE_CURRENT_LIST_DIR}/../../CMakeLists.common.txt )
include( ${CMAKE_CURRENT_LIST_DIR}/../../CMakeLists.custom.txt )
target_link_libraries(${CMAKE_PROJECT_NAME} ${CUSTOM_TARGET_LINK_LIBS})
